--- a/src/main/resources/templates-2/index.html
+++ b/src/main/resources/templates-2/index.html
@@ -32,7 +32,8 @@
     <table class="table table-striped table-alignment mt-20 text-center">
         <thead id="residentsTable">
         <tr>
-            <th>Id</th>
+            <th>No.</th>
+            <th>Id.</th>
             <th>Full name</th>
             <th>Age</th>
             <th>Gender</th>
@@ -45,7 +46,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="resident : ${responseEntity.residents}">
+        <tr th:each="resident, iStat : ${responseEntity.residents}">
+            <!--div th:with="someVariable=${iStat.count}">
+            <td th:text="${iStat.count} + ' (' + ${resident.id} + ') ' + ${resident.counter}"></td-->
+            <td th:text="${resident.counter}"></td>
             <td th:text="${resident.id}"></td>
             <td><a th:href="@{/edit/{id}(id=${resident.id})}">[[${resident.fullName}]]</a></td>
             <td th:text="${resident.age}"></td>
@@ -65,7 +69,7 @@
     <div class="row">
         <div th:if="${responseEntity.page['totalPages'] > 1}">
             <div>
-                Total Items: [[${responseEntity.page['totalPages']}]]
+                Total Pages: [[${responseEntity.page['totalPages']}]]
             </div>
             <div>
                 <span th:each="i: ${#numbers.sequence(1, responseEntity.page['totalPages'])}">
